# soroban-did-contract

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: contract.rs  did_document.rs  did_trait.rs  did_uri.rs  error.rs  lib.rs  service.rs  storage.rs  test.rs  verification_method.rs
src/test/: base32.rs  contract.rs  did_uri.rs  setup.rs
